# BT-MatML-Editor

./: .gitignore  BT_MatML_Editor-Config.h.in  CMakeLists.txt  FindXSD.cmake  README.md  _b_t___mat_m_l___abbreviation___g_u_i_8h_source.html  _b_t___mat_m_l___app_8h.html  _b_t___mat_m_l___app_8h_source.html  _b_t___mat_m_l___associate___g_u_i_8h_source.html  _b_t___mat_m_l___association_details___g_u_i_8h_source.html  _b_t___mat_m_l___authority_details___display___g_u_i_8h_source.html  _b_t___mat_m_l___authority_details___g_u_i_8h_source.html  _b_t___mat_m_l___base___g_u_i_8h_source.html  _b_t___mat_m_l___bulk_details___g_u_i_8h_source.html  _b_t___mat_m_l___characterization___g_u_i_8h_source.html  _b_t___mat_m_l___chemical_composition___g_u_i_8h_source.html  _b_t___mat_m_l___chemical_element_symbol___g_u_i_8h_source.html  _b_t___mat_m_l___component_details___g_u_i_8h_source.html  _b_t___mat_m_l___concentration___g_u_i_8h_source.html  _b_t___mat_m_l___currency_code___g_u_i_8h_source.html  _b_t___mat_m_l___data___g_u_i_8h_source.html  _b_t___mat_m_l___data_format___g_u_i_8h_source.html  _b_t___mat_m_l___data_source_details___display___g_u_i_8h_source.html  _b_t___mat_m_l___data_source_details___g_u_i_8h_source.html  _b_t___mat_m_l___default_8h_source.html  _b_t___mat_m_l___definition___g_u_i_8h_source.html  _b_t___mat_m_l___dimensional_details___g_u_i_8h_source.html  _b_t___mat_m_l___dimensions___g_u_i_8h_source.html  _b_t___mat_m_l___editor-_config_8h_source.html  _b_t___mat_m_l___element___g_u_i_8h_source.html  _b_t___mat_m_l___form___g_u_i_8h_source.html  _b_t___mat_m_l___formula___g_u_i_8h_source.html  _b_t___mat_m_l___g_u_i_8h_source.html  _b_t___mat_m_l___gather_i_d_refs_8h_source.html  _b_t___mat_m_l___geometry___g_u_i_8h_source.html  _b_t___mat_m_l___glossary___g_u_i_8h_source.html  _b_t___mat_m_l___glossary_term___g_u_i_8h_source.html  _b_t___mat_m_l___graph___g_u_i_8h_source.html  _b_t___mat_m_l___graphs___g_u_i_8h_source.html  _b_t___mat_m_l___i_d___g_u_i_8h_source.html  (+669 more)
.github/: FUNDING.yml
.github/workflows/: codeql.yml  doxygen-gh-pages.yml
build-old/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BT-MatML-Editor.sln  BT-MatML-Editor.vcxproj  BT-MatML-Editor.vcxproj.filters  BT_MatML_Editor-Config.h  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-old/linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
data/examples/: ExportMaterialBranchTest.xml  MatML3e1.xml  MatML3e123_UUID.xml  MatML3e1_UUID.xml  MatML3e2_UUID.xml  MatML3e3.xml  MatML3e3_UUID.xml  SortClassTest.xml  ansys-structural_steel.xml  chatgpt-stainless_steel.xml  chatgpt-steel.xml
data/libs/: BulkDetails_lib.xml  ComponentDetails_lib.xml  Unit_lib.xml  Units_lib.xml  Units_lib.xml.bak  matml31_lib.xsd  xsd_lib2xsd_libcxx.sh
data/schema/: matml31.cxx  xsd2xsdcxx.sh  xsd_lib2xsd_libcxx.sh
docs/html/: _b_t___mat_m_l___abbreviation___g_u_i_8h_source.html  _b_t___mat_m_l___app_8h.html  _b_t___mat_m_l___app_8h_source.html  _b_t___mat_m_l___associate___g_u_i_8h_source.html  _b_t___mat_m_l___association_details___g_u_i_8h_source.html  _b_t___mat_m_l___authority_details___display___g_u_i_8h_source.html  _b_t___mat_m_l___authority_details___g_u_i_8h_source.html  _b_t___mat_m_l___base___g_u_i_8h_source.html  _b_t___mat_m_l___bulk_details___g_u_i_8h_source.html  _b_t___mat_m_l___characterization___g_u_i_8h_source.html  _b_t___mat_m_l___chemical_composition___g_u_i_8h_source.html  _b_t___mat_m_l___chemical_element_symbol___g_u_i_8h_source.html  _b_t___mat_m_l___class___g_u_i_8h_source.html  _b_t___mat_m_l___component_details___g_u_i_8h_source.html  _b_t___mat_m_l___compound___g_u_i_8h_source.html  _b_t___mat_m_l___concentration___g_u_i_8h_source.html  _b_t___mat_m_l___currency_code___g_u_i_8h_source.html  _b_t___mat_m_l___data1___g_u_i_8h_source.html  _b_t___mat_m_l___data___g_u_i_8h_source.html  _b_t___mat_m_l___data_format___g_u_i_8h_source.html  _b_t___mat_m_l___data_source_details___display___g_u_i_8h_source.html  _b_t___mat_m_l___data_source_details___g_u_i_8h_source.html  _b_t___mat_m_l___definition___g_u_i_8h_source.html  _b_t___mat_m_l___dimensional_details___g_u_i_8h_source.html  _b_t___mat_m_l___dimensions___g_u_i_8h_source.html  _b_t___mat_m_l___element___g_u_i_8h_source.html  _b_t___mat_m_l___form___g_u_i_8h_source.html  _b_t___mat_m_l___formula___g_u_i_8h_source.html  _b_t___mat_m_l___g_u_i_8h_source.html  _b_t___mat_m_l___geometry___g_u_i_8h_source.html  _b_t___mat_m_l___glossary___g_u_i_8h_source.html  _b_t___mat_m_l___glossary_term___g_u_i_8h_source.html  _b_t___mat_m_l___graph___g_u_i_8h_source.html  _b_t___mat_m_l___i_d___g_u_i_8h_source.html  _b_t___mat_m_l___intro___g_u_i_8h_source.html  _b_t___mat_m_l___mat_m_l___doc___g_u_i_8h_source.html  _b_t___mat_m_l___mat_m_l_info___g_u_i_8h_source.html  _b_t___mat_m_l___mat_m_l_tree_item_data_8h_source.html  _b_t___mat_m_l___material_frame_8h_source.html  (+658 more)
doxygen/: Doxyfile
images/: BT_MatML_Editor_256px.xpm  BT_MatML_Editor_32px.xpm
include/: BT_MatML_App.h  BT_MatML_GatherIDRefs.h  BT_MatML_GatherIDRefs.inl  BT_MatML_MatMLTreeItemData.h  StringStream.h  Uuid-Utility.h  bt_matml_config.h  config.h  fcopy.h  matml31_strongtypedef.h  observer_ptr.h  pch.h  version.h
search/: all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_f.js  files_1.js  functions_10.js  functions_15.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_f.js  namespaces_0.js  pages_0.js  (+3 more)
src/: BT_MatML_App.cpp  BT_MatML_GatherIDRefs.cpp  BT_MatML_MatMLTreeItemData.cpp  fcopy.cpp  matml31.cxx  todo.txt
(+1344 files in other folders)
